Fixed a spacing issue

--- a/static/style.css
+++ b/static/style.css
@@ -40,7 +40,7 @@ a {
     padding: 0.8em; 
     background: white;
     position: absolute;
-    top: 5em;
+    top: 4em;
     left: 5px;
 }
 
